--- a/docs/TODO
+++ b/docs/TODO
@@ -4,7 +4,7 @@ $Id$
 Here a some notes about things to fix, ideas and potential features to be
 implemented:
 
-- correctly handle all Date/Time format, there is 3 of them:
+- Correctly handle all Date/Time format, there is 3 of them:
 
   Sun, 06 Nov 1994 08:49:37 GMT   ; RFC 822, updated by RFC 1123
   Sunday, 06-Nov-94 08:49:37 GMT  ; RFC 850, obsoleted by RFC 1036
@@ -15,13 +15,13 @@ implemented:
 
   Actually only the first format is supported.
 
-- implement multi-server with a dispatcher of request to build server which
+- Implement multi-server with a dispatcher of request to build server which
   must support a lot of requests. Could be using GLADE or a standard
   redirector of request (using HTTP redirection).
 
-- implement a Proxy server.
+- Implement a Proxy server protocol.
 
-- change server parameters via the admin page (like the maximum number of
+- Change server parameters via the admin page (like the maximum number of
   connections, server name, active session, upload path...).
 
 - Thread Pool management (dynamically adding lines if needed...)
@@ -29,11 +29,6 @@ implemented:
 - Make the Session management a separate partition to be able to share the
   session data across the network. Something needed to do load balancing into
   a Web Farm.
-
-- More transparent SOAP support. It would be nice to be able to generate
-  stub/skeleton from a spec file (this work could reuse the gnatstub ASIS
-  appication). Another path is to implement WSDL support and generate SOAP
-  stub/skeleton from it.
 
 - We need to add the directory browser template into the config file.
 
@@ -93,3 +88,12 @@ implemented:
   is required to iterate through all session to count them. One idea could be
   to make AWS.Server.Get_Status a non private routine which returns a
   translate table usable in other context...
+
+- The WSDL types child package generated has memory leak. For the case of
+  array into a record we have an access type. This access type must be freed
+  by the user today to avoid memory leak, we must provide something
+  better. Users must not have to handle this.
+
+- AWS.Client support a single cookie. This is a bad limitation and must be
+  fixed. It must also handle properly the case where a cookie value is
+  updated.
