--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,26 @@
+2003-03-11  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator-skel.adb:
+	(New_Procedure): Fix reference to a safe array access.
+
+	* soap-generator-stub.adb:
+	(Output_Result): Call safe array access constructor.
+
+	* soap-generator.adb:
+	(Generate_Array): Generate array safe pointer support.
+	(Generate_Record): Add comment about array fields access. Convert
+	 array fieds to array safe pointer. Fix access to safe array items.
+	(Type_Name): Name of array type terminate by _Safe_Access now.
+
+	* soap-utils.adb:
+	(To_T_Array): Returns a T_Array instead of a T_Array_Access.
+	(Safe_Pointers): New package.
+
+	* soap-utils.ads:
+	(To_T_Array): Remove generic formal parameter T_Array_Access. Returns
+	 a T_Array instead of a T_Array_Access.
+	(Safe_Pointers): New package.
+
 2003-03-08  Pascal Obry  <p.obry@wanadoo.fr>
 	
 	* soap-generator.adb:
