--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-11  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-client.adb:
+	(SOAP_Post): Add exception handler to free the Connection.
+
 2003-03-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.adb:
