--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-15  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb:
+	Update to version 5.1.
+
 2003-03-11  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser.adb:
