--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-16  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* wsdl2aws.adb:
+	(Verbose): New variable. Implement a multi-level verbose mode. (-v -v).
+
 2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
