--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-18  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-message-reader.adb:
+	(Characters): Convert Ch from Utf8 to Basic_8bit.
+
+	* soap-message-xml.ads:
+	Minor reformatting.
+
 2003-03-16  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator-skel.adb:
