--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-client.ads:
+	Minor reformatting.
+
 2003-03-13  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-response.adb:
