--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,13 @@
+2003-03-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(GARGS): Add -I../ssl because SOAP.Generator.Stub depends on
+	 SOAP.Client.
+
+	* wsdl2aws.adb:
+	Add support for option -proxy, -pu and -pp, this implements proxy
+	 authentication WSDL/SOAP support.
+
 2003-03-16  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wsdl2aws.adb:
