--- a/docs/TODO
+++ b/docs/TODO
@@ -81,11 +81,8 @@ implemented:
 - Have a way to record specific MIME types for filenames matching a regular
   expression.
 
-- Add some routines to be able to retrieve status about the server. For
-  example the number of user connected. Actually to have this information it
-  is required to iterate through all session to count them. One idea could be
-  to make AWS.Server.Get_Status a non private routine which returns a
-  translate table usable in other context...
+- Add some high level routines in AWS.Server.Status to get some server
+  information like the number of current users connected...
 
 - AWS.Client support a single cookie. This is a bad limitation and must be
   fixed. It must also handle properly the case where a cookie value is
