--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-20  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-client.adb:
+	(Create): Correctly initialize the web and proxy authentication
+	 mode.
+	(Send_Authentication_Header): Minor editing.
+	
 2003-03-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server-status.ads:
