--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* wsdl2aws.adb:
+	(Get_Document): New procedure to retreive WSDL document from an URL.
+	(Parse_Command_Line): Add support for -s option.
+	Load document from the Web if WSDL document name start with http://
+
 2003-03-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
