--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,9 +1,17 @@
 2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wsdl2aws.adb:
+	Add support for -doc option. Removes -rpc option. We want to bind
+	 to RPC style web services, the -doc option is to try to parse a
+	 document style web service as an RPC one but there is no
+	 guarantee that this will work.
+
+2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* wsdl2aws.adb:
 	Add support for -o option used to specified the name of the local
 	 file when using wsdl2aws with an URL.
-	
+
 2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wsdl2aws.adb:
