--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-25  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(build_wsdl): Add -doc option.
+
 2003-03-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* agent.adb:
