--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-09  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-mime.adb:
+	(Initialize): Remove duplicated Mime type registrations for .gz and
+	 .tar file extensions.
+
 2003-04-01  Pascal Obry  <obry@act-europe.fr>
 
 	* aws-mime.adb:
