--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-15  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-types.ads:
+	Add some comments. Reorganize private code a bit.
+
 2003-03-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-wsdl-parser.adb:
