--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-message-reader.adb:
+	(Characters): Add Unreferenced pragma for Tmp.
+	(Ignorable_Whitespace): Idem.
+
 2003-04-15  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-types.ads:
