--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(GARGS): Add -I../xsrc.
+
 2003-03-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
